--- a/Entrypage/Mainpage/Skillpage/Index.html
+++ b/Entrypage/Mainpage/Skillpage/Index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll/dist/locomotive-scroll.min.css">
 
     <!--- Tailwind CSS (Utility-based CSS Framework) --->
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
     <!--- Remix Icons (For Icons like Home, Arrows, etc.) --->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.css" rel="stylesheet">
