--- a/home.html
+++ b/home.html
@@ -465,7 +465,7 @@
         <!--- Profile Picture (Centered Circle) --->
         <div class="pro-div absolute">
           <div class="bg-white rounded-full overflow-hidden flex justify-center items-center">
-            <img class="w-[33.5vw] h-[33.5vw] object-cover rounded-full" src="pro.jpg" alt="subbu">
+            <img class="w-[33.5vw] h-[33.5vw] object-cover rounded-full" src="images/pro.jpg" alt="subbu">
           </div>
         </div>
 
