--- a/entrypage/mainpage/index.html
+++ b/entrypage/mainpage/index.html
@@ -62,7 +62,7 @@
             alt="subbu">
           </div>
           <div class="location relative">
-            <img src="images/locator.png" alt="">
+            <img src="../images/locator.png" alt="">
           </div>
         </div>
 
