--- a/entrypage/mainpage/index.html
+++ b/entrypage/mainpage/index.html
@@ -25,7 +25,7 @@
   
   <!--- 👇 Laiding Page --->
   
-  <div class="loading-container h-screen absolute hidden">
+  <div class="loading-container h-screen absolute">
     <div id="loader">
       <div class="typewriter">Preparing your ticket to space...</div>
       <div class="rocket"></div>
