--- a/entrypage/mainpage/aboutpage/index.html
+++ b/entrypage/mainpage/aboutpage/index.html
@@ -202,7 +202,7 @@ My journey is not just about becoming a CEO but about creating groundbreaking so
       
       <!--- Resume Link --->
       
-      <a href="resume.pdf" download>
+      <a href="Resume.pdf" download>
         <button class="resume absolute rounded-full">
           Download Resume
         </button>
