--- a/entrypage/mainpage/index.html
+++ b/entrypage/mainpage/index.html
@@ -209,15 +209,27 @@
   <!--- Detailed Explaination Container --->
         
   <div class="bg-layer w-screen h-screen absolute text-white flex justify-center
-  items-center hidden overflow-hidden">
+  items-center overflow-hidden hidden">
+    <h1 class="wait absolute hidden">Please Wait...</h1>
     <div class="w-full heading">
+      <div class="galaxy-container">
+  <div class="stars-background"></div>
+  <div class="hyper-button-container">
+    <div class="outer-glow-ring"></div>
+    <div class="inner-glow-ring"></div>
+    <div class="floating-particle"></div>
+    <button class="hyper-tech-btn">
+      <span>Hear</span>
+    </button>
+  </div>
+</div>
       <h1></h1>
       <div class="close absolute">
         <i class="ri-close-line"></i>
       </div>
     </div>
     <div class="future-para w-full detailed absolute">
-      <p class="text-justify"></p>
+      <p id="para1" class="text-justify"></p>
     </div>
   </div>
   
